modify TPCF model to hw3-2 and 3-1, reach better perfomance than chung yi code

--- a/src/chung yi/code/Makefile
+++ b/src/chung yi/code/Makefile
@@ -3,6 +3,8 @@ data:=test1
 # 3-2: R1: 0.182915, R2: 0.171701 
 # 3-2: after mapping, 0.181202 
 
+# 3-3: dim 20, R1: 0.5 1.291079, R2: 1 0.786609
+
 1-1: 
 	cd ./1_MF
 	g++ -O2 ./MF.cpp -o ./MF
